.collect(Collectors.toList()) instead of .toList()
Because .toList() literally doesn't work